[gd_scene load_steps=2 format=3 uid="uid://b2n5vjnv3pigl"]

[ext_resource type="Script" path="res://Scenes/UI/SettingsMenu/settings_menu.gd" id="1_7fe7i"]

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource("1_7fe7i")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullscreenCheckButton" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ResolutionOptionButton" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Назад
"
